fixing spacing on phone size media querries

--- a/src/pages/LayoutPage/styles/LayoutPage.scss
+++ b/src/pages/LayoutPage/styles/LayoutPage.scss
@@ -77,6 +77,7 @@ div {
 			}
 			.main-container {
 				.backgroundBox {
+					top: 25%;
 					.waveA {
 						img {
 							width: 1500vw;
@@ -102,10 +103,11 @@ div {
 			}
 			.main-container {
 				.backgroundBox {
+					top: 15%;
 					.waveA {
 						img {
 							width: 1500vw;
-							height: 50vh;
+							height: 60vh;
 						}
 					}
 					.waveB {
